# chacha20_study

./: .gitignore  CMakeLists.txt  Makefile  chacha20.c  chacha20.h  flake.nix  main.c  readme.md  run_test.sh  test_chacha.c
include/: chacha20.h
src/: chacha20.c
studys/: size.c  strtol.c
test/: test_chacha.c  test_chacha.h  test_main.c
